--- a/products/templates/detail_product.html
+++ b/products/templates/detail_product.html
@@ -23,6 +23,7 @@
     
     <div class="product-info">
         <div class="product-brand">{{ product.brand }}</div>
+        <div class="product-brand">SKU {{ product.sku }}</div>
         <h1 class="product-name">{{product.name}}</h1>
         <div class="product-price">{{ product.price | format_price}}</div>
         
